Correção img deploy

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <aside class="container-aside">
           <picture>
             <img
-              src="../img/corpo.png"
+              src="./img/corpo.png"
               alt="foto do corpo humano"
               id="corpo-humano"
             />
