Mudanças nas páginas exercícios

--- a/public/treino-de-lombar/index.html
+++ b/public/treino-de-lombar/index.html
@@ -28,7 +28,7 @@
     </div>
       <div class="texto">
         <h1 class="title1">8 Alongamentos para Lombar e Como Fazer</h1>
-      <p class="title1">
+      <p class="text1">
       Os alongamentos para lombar, como os exercícios de abraçar a perna, ponte ou posição da
       serpente, ajudam a relaxar a musculatura, fortalecer os músculos das costas, pernas, quadris e
       abdominais, melhorando a mobilidade e a flexibilidade, e ajudando a corrigir a postura,
@@ -62,7 +62,7 @@
       O alongamento da coxa permite alongar o músculo da parte de trás da coxa, além da panturrilha
       e pé, ajudando a fortalecer a musculatura da perna e reduzir a pressão sobre a lombar.
     </p>
-    <p><b>Como fazer:</b>deitar de barriga para cima, deixando as pernas e os
+    <p class="text1"><b class="bold">Como fazer:</b>deitar de barriga para cima, deixando as pernas e os
       braços esticados por cerca de 10 segundos. Em seguida, dobrar uma perna e manter a outra
       esticada. Elevar a perna esticada, com o auxílio de uma toalha apoiada, um cinto ou uma faixa
       elástica, na base do pé e trazer a perna esticada o máximo possível em direção ao peito,
@@ -77,7 +77,7 @@
       O abraço da perna deve ser feito deitado, permitindo alongar os músculos da lombar, além do
       glúteo e coxas, melhorando a flexibilidade e aumentando a amplitude dos movimentos.
     </p>
-    <p><b>Como fazer:</b>deitar de barriga para cima e dobrar os joelhos mantendo os pés no chão, ou deixando uma perna
+    <p class="text1"><b class="bold">Como fazer:</b>deitar de barriga para cima e dobrar os joelhos mantendo os pés no chão, ou deixando uma perna
       esticada. Com a ajuda das mãos, trazer um joelho em direção ao peito, mantendo essa posição
       por cerca de 15 segundos. Fazer o mesmo com a outra perna, repetindo o movimento por 2 vezes
       em cada perna.</p>
@@ -92,7 +92,7 @@
       lombar. No entanto, esse alongamento não deve ser feito caso a pessoa tenha dor intensa na
       lombar ou dor nos joelhos.
     </p>
-    <p><b>Como fazer:</b>
+    <p class="text1"><b class="bold">Como fazer:</b>
       deitar de barriga para cima e dobrar os joelhos mantendo os pés no chão. Afastar os joelhos
       levemente para fora, girando os pés de forma a conseguir juntar as plantas dos pés, afastando
       os joelhos o máximo que se conseguir, e aguentar 10 segundos. Relaxar e repetir 5 vezes. Esta
@@ -109,7 +109,7 @@
       A ponte ajuda a estabilizar e fortalecer os músculos do core que sustentam e estabilizam a
       coluna, trabalhando a lombar, os glúteos, o quadril e o abdômen.
     </p>
-    <p><b>Como fazer:</b>
+    <p class="text1"><b class="bold">Como fazer:</b>
       deitar de barriga para cima, com os braços alinhados com o corpo, dobrar os joelhos e apoiar
       os pés no chão com os calcanhares alinhados ao joelho. Contrair o abdômen e os glúteos e
       elevar o quadril do chão até que o corpo forme uma linha reta dos joelhos à cabeça. Manter
@@ -125,7 +125,7 @@
     <p class="text1">
       A posição da serpente permite alongar e fortalecer os músculos da parte inferior das costas,
       ajudando a prevenir a dor na lombar.</p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
       deitar de barriga para baixo, esticando os pés, deixando-os alinhados à coluna. Colocar as
       palmas das mãos no chão, na altura do peito e esticar os braços, empurrando o chão e elevando
       o tronco para cima. Manter os braços esticados, olhando sempre para frente e com o pescoço
@@ -144,7 +144,7 @@
       região lombar, além dos músculos do abdômen, glúteos, quadris, posteriores da coxa e ombros,
       melhorando a postura e a flexibilidade.
     </p>
-    <p><b>Como fazer:</b>
+    <p class="text1"><b class="bold">Como fazer:</b>
       deitar no chão com a barriga para baixo, com as pernas esticadas, braços estendidos acima da
       cabeça e palma das mãos voltadas para baixo. Contrair o abdômen, os glúteos e a coluna lombar.
       Elevar os braços e as pernas para trás, como se fosse voar. É importante que a cabeça fique
@@ -162,7 +162,7 @@
       A postura do gato permite alongar os músculos das costas, quadris, abdômen e tórax, melhorando
       a flexibilidade da coluna lombar, além do pescoço e ombros.
     </p>
-    <p><b>Como fazer:</b>
+    <p class="text1"><b class="bold">Como fazer:</b>
       no chão, ficar na posição de 4 apoios, com os joelhos separados na largura dos quadris e os
       pulsos alinhados com os ombros. Arquear as costas como se fosse um gato, inspirando e olhando
       para cima. Ao expirar, mover as costas para cima, curvando-a e olhando para baixo em direção
@@ -179,7 +179,7 @@
       A rotação dos quadris permite melhorar a flexibilidade da coluna e quadris, reduzir a rigidez
       e dando mais estabilidade para o corpo.
     </p>
-    <p><b>Como fazer:</b>
+    <p class="text1"><b class="bold">Como fazer:</b>
       de pé, com os pés separados, na largura dos ombros, posicionar as mãos na cintura. Lentamente,
       girar o quadril para a esquerda, frente e direita e para trás e repetir novamente. Em seguida,
       repetir os movimentos no sentido contrário, para a direita, frente, esquerda e para trás.
