--- a/public/treino-de-perna/index.html
+++ b/public/treino-de-perna/index.html
@@ -27,7 +27,7 @@
       </header>
       </div>
       <div class="texto">
-      <h1 class="title1">5 exercícios para treinar perna em casa</h1>
+      <h1 class="title1">5 Exercícios para Treinar Perna em Casa</h1>
       <p class="text1">
         O treino de pernas para fazer em casa é simples e fácil permitindo trabalhar glúteos,
         panturrilha, coxa e parte posterior da perna, podendo ser feitos com ou sem a utilização de
@@ -44,27 +44,22 @@
         um educador físico que pode orientar treinos que atendam às necessidades e objetivos de
         forma individualizada.
       </p>
-      <! --1-->
+
       <h4 class="subtitle">1. Flexão plantar</h4>
-      <img
-        src="img/treino-de-pernas-em-casa_52133.webp"
-        alt="aaaa"
-        style="width: 660px; height: 400px"
-      />
+      <img src="img/treino-de-pernas-em-casa_52133.webp" alt="aaaa" style="width: 660px; height: 400px"/>
       <p class="text1">
         Esse exercício ajuda a fortalecer os músculos da panturrilha, além de melhorar o equilíbrio
         do corpo e prevenir lesões em treinos de corrida ou caminhada, por exemplo.
       </p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         apoiar-se em uma parede ou no encosto de uma cadeira. Com a coluna reta e o abdômen
         contraído, ficar de ponta de pé e retornar à posição inicial. Esse treino pode ser feito em
         3 séries de 12 a 20 movimentos e com 20 a 30 segundos de descanso entre cada série.
       </p>
-      <p><b>Opção com peso:</b>
+      <p class="text1"><b class="bold">Opção com peso:</b>
         pode-se usar caneleira, uma em cada perna, ou segurar peso nas mãos como halteres ou usar
         garrafas pet com água ou areia, para intensificar o trabalho muscular.
       </p>
-      <! --2-->
       <h4 class="subtitle">2. Elevação de perna</h4>
       <img
         style="display: block"
@@ -72,16 +67,16 @@
         alt="aaaa"
         style="width: 660px; height: 400px"
       />
-      <br /><br /><p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         apoiar-se em uma parede ou no encosto de uma cadeira. Com a coluna reta e o abdômen
         contraído, ficar de ponta de pé e retornar à posição inicial. Esse treino pode ser feito em
         3 séries de 12 a 20 movimentos e com 20 a 30 segundos de descanso entre cada série.
       </p>
-      <br /><br /><p><b>Opção com peso:</b>
+      <p class="text1"><b class="bold">Opção com peso:</b>
         pode-se usar caneleira, uma em cada perna, ou segurar peso nas mãos como halteres ou usar
         garrafas pet com água ou areia, para intensificar o trabalho muscular.
       </p>
-      <! --3-->
+  
       <h4 class="subtitle">3. Agachamento</h4>
       <img
         src="img/treino-de-pernas-em-casa_52135_l.webp"
@@ -92,17 +87,17 @@
         O agachamento é um exercício completo para as pernas pois trabalha glúteo, coxas,
         panturrilha, parte posterior das pernas e abdômen.
       </p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         pegar uma cadeira e apoiar uma mão na parte do encosto. Com a coluna reta e abdômen
         contraído, elevar uma perna para frente e depois levar a perna para trás, fazendo movimentos
         como se a perna fosse um pêndulo. Repetir o exercício com a outra perna e voltar à posição
         inicial. Esse treino pode ser feito em 2 a 3 séries de 10 a 15 repetições.
       </p>
-      <br /><br /><p><b>Opção com peso:</b>
+      <p class="text1"><b class="bold">Opção com peso:</b>
         pode-se usar caneleira, uma em cada perna, ou segurar peso nas mãos como halteres ou usar
         garrafas pet com água ou areia, para intensificar o trabalho muscular.
       </p>
-      <! --4-->
+    
       <h4 class="subtitle">4. Agachamento isométrico</h4>
       <img
         src="img/treino-de-pernas-em-casa_52136_l.webp"
@@ -110,7 +105,7 @@
         style="width: 660px; height: 400px"
       />
       <p class="text1"></p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         em pé, afastar os pés, alinhados à largura dos ombros. As costas devem sempre ficar retas e
         abdômen contraído. Descer lentamente flexionando os joelhos, inclinando o tronco
         ligeiramente para frente e empurrando o bumbum bem para trás, como se fosse sentar numa
@@ -118,13 +113,13 @@
         a ponta dos pés. Voltar à posição inicial. Fazer 3 séries de 20 repetições com 1 minuto de
         descanso entre as séries.
       </p>
-      <br /><br /><p><b>Opção com peso:</b>
+      <p class="text1"><b class="bold">Opção com peso:</b>
         pode-se usar como peso uma bola de kettle ou halter e, caso não os tenha, pode-se colocar um
         ou mais pacotes de 1kg de arroz ou de feijão dentro de uma mochila, por exemplo. Assim,
         deve-se pegar o peso, e com os dois braços à frente do corpo segurá-lo e fazer o movimento
         do agachamento descendo com os braços alinhados ao corpo.
       </p>
-      <! --5-->
+     
       <h4 class="subtitle">5. Agachamento búlgaro</h4>
       <img
         src="img/treino-de-pernas-em-casa_52137_l.webp"
@@ -135,13 +130,13 @@
         O agachamento búlgaro é um dos treinos mais eficientes para trabalhar as coxas e os glúteos,
         melhorando o fortalecimento e o alongamento muscular, além de tonificar as pernas.
       </p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         de costas, apoiar uma perna em cima de uma cadeira ou um banco, mantendo o outro pé no chão.
         Flexionar o joelho da perna que está apoiada no chão, descendo como se tivesse agachando. É
         importante manter a coluna reta e os pés e quadris alinhados. Fazer 3 séries de 10
         repetições com cada perna, descansando 1 minuto entre cada série.
       </p>
-      <p><b>Opção com peso:</b>
+      <p class="text1"><b class="bold">Opção com peso:</b>
         pode-se usar um halter em cada mão para fazer os agachamentos ou usar garrafa pet cheia com
         água ou areia ou pacote de 1kg de arroz ou feijão, por exemplo.
       </p>
@@ -165,7 +160,7 @@
         O alongamento da parte posterior da coxa pode ser feito sentado no chão, permitindo alongar
         os músculos posteriores da coxa, o glúteo, a panturrilha e a planta do pé.
       </p>
-      <p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         deve-se sentar no chão com as pernas retas, dobrar uma das pernas e com a coluna reta e
         ombros alinhados, inclinar o corpo para frente para alcançar o pé com uma mão e tentar
         puxá-lo em direção ao corpo, segurando por 20 a 30 segundos. Repetir com a outra perna.
@@ -176,7 +171,7 @@
         alt="aaaa"
         style="width: 660px; height: 400px"
       />
-      <br /><br /><p><b>Como fazer:</b>
+      <p class="text1"><b class="bold">Como fazer:</b>
         apoiar-se em uma perna e dobrar a outra para trás, segurando-a com as mãos por 30 a 60
         segundos. Repetir com a outra perna.
       </p>
