Reorganização e ajustes nos CSS das páginas de exercícios, adicionado novo ícone de ve voltar página.

--- a/exercicios/treino-de-abdomen.html
+++ b/exercicios/treino-de-abdomen.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/6c32633a00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="treino-de-abdomen.css" />
 
     <title>Treino de Abdomem</title>
   </head>
@@ -32,6 +32,10 @@
     </div>
 
     <div class="texto">
+      <a href="../index.html">
+        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+      </a>
+
       <h1 class="title1">6 Exercícios para Definir o Abdômen em Casa</h1>
 
       <p class="text1">
