--- a/exercicios/treino-de-gluteos.html
+++ b/exercicios/treino-de-gluteos.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/6c32633a00.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="treino-de-gluteos.css" />
     <title>Treino de Gluteo</title>
   </head>
   <body>
@@ -18,18 +18,17 @@
         <div class="logotipo">
           <h1 id="logo">Nutr<span id="ponto">.</span>IMC</h1>
         </div>
-        <div class="menu">
-          <a href="../index.html">Início</a>
-          <a href="#" onclick="alternarConteudo('form1', 'container-lista'); return false;"
-            >Calculadora IMC</a
-          >
-        </div>
+        <div class="menu"></div>
         <div class="container-toggle">
           <input type="checkbox" id="toggle" />
         </div>
       </header>
     </div>
     <div class="texto">
+      <a href="../index.html">
+        <i class="fa-sharp fa-solid fa-rotate-left"></i>
+      </a>
+
       <h1 class="title1">9 exercícios para treino de glúteos em casa</h1>
 
       <p class="text1">
