--- a/exercicios/treino-de-pernas.html
+++ b/exercicios/treino-de-pernas.html
@@ -48,10 +48,9 @@
       </p>
 
       <h4 class="subtitle">1. Flexão plantar</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52133.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Esse exercício ajuda a fortalecer os músculos da panturrilha, além de melhorar o equilíbrio
@@ -69,11 +68,10 @@
         garrafas pet com água ou areia, para intensificar o trabalho muscular.
       </p>
       <h4 class="subtitle">2. Elevação de perna</h4>
-      <img
+      <img class="fotos"
         style="display: block"
         src="../img/treino-de-pernas-em-casa_52134_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         <b class="bold">Como fazer:</b>
@@ -88,10 +86,9 @@
       </p>
 
       <h4 class="subtitle">3. Agachamento</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52135_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O agachamento é um exercício completo para as pernas pois trabalha glúteo, coxas,
@@ -111,10 +108,9 @@
       </p>
 
       <h4 class="subtitle">4. Agachamento isométrico</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52136_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1"></p>
       <p class="text1">
@@ -135,10 +131,9 @@
       </p>
 
       <h4 class="subtitle">5. Agachamento búlgaro</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52137_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O agachamento búlgaro é um dos treinos mais eficientes para trabalhar as coxas e os glúteos,
@@ -167,10 +162,9 @@
         coxa e panturrilha. Para fazer esses alongamentos, não é necessário o uso de pesos.
       </p>
       <h4 class="subtitle">1. Alongamento da parte posterior da coxa</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52138_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O alongamento da parte posterior da coxa pode ser feito sentado no chão, permitindo alongar
@@ -183,10 +177,9 @@
         puxá-lo em direção ao corpo, segurando por 20 a 30 segundos. Repetir com a outra perna.
       </p>
       <h4 class="subtitle">2. Alongamento da parte anterior da coxa</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-pernas-em-casa_52139_l.webp"
         alt="aaaa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         <b class="bold">Como fazer:</b>
