--- a/exercicios/treino-de-abdomen.html
+++ b/exercicios/treino-de-abdomen.html
@@ -62,7 +62,8 @@
       </p>
 
       <h4 class="subtitle">1. Abdominal em V</h4>
-      <img src="../img/1.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos"
+      src="../img/1.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para fazer esse abdominal, a pessoa deve deitar com a barriga para cima e levantar um pouco
         as pernas e o tronco, colocando os braços para frente, realizando esses dois movimentos ao
@@ -72,7 +73,8 @@
       </p>
 
       <h4 class="subtitle">2. Abdominal com perna elevada</h4>
-      <img src="../img/2.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos"
+      src="../img/2.webp" alt="Italian Trulli2" />
       <p class="text1">
         Nesse abdominal, a pessoa deve deitar no chão de barriga para cima, levantar as pernas
         esticadas ou semi flexionadas e o tronco, mantendo os braços para frente. Esse exercício é
@@ -82,7 +84,8 @@
       </p>
 
       <h4 class="subtitle">3. Abdominal cruzado</h4>
-      <img src="../img/3.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos"
+      rc="../img/3.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para fazer esse abdominal, também conhecido como abdominal bicicleta, a pessoa deve se
         posicionar como se fosse fazer um abdominal normal, colocar as mãos atrás da nuca, tirar os
@@ -92,7 +95,8 @@
       </p>
 
       <h4 class="subtitle">4. Abdominal com elevação do quadril na bola</h4>
-      <img src="../img/4.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos"
+      src="../img/4.webp" alt="Italian Trulli2"/>
       <p class="text1">
         O abdominal com elevação do quadril na bola também é um ótimo exercício, sendo necessário
         para isso deitar no chão, de barriga para cima, colocar a planta dos pés na boal de pilates
@@ -101,7 +105,8 @@
       </p>
 
       <h4 class="subtitle">5. Prancha com bola</h4>
-      <img src="../img/5.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos"
+       src="../img/5.webp" alt="Italian Trulli2"/>
       <p class="text1">
         Neste exercício, deve-se colocar os pés na bola e apoiar os braços no chão, como se fosse
         fazer a prancha. Em seguida, deve-se dobrar os joelhos, puxando a bola para frente, sem
@@ -111,7 +116,8 @@
       </p>
 
       <h4 class="subtitle">6. Prancha com 2 apoios</h4>
-      <img src="../img/6.webp" alt="Italian Trulli2" style="width: 660px; height: 400px" />
+      <img class="fotos" 
+      src="../img/6.webp" alt="Italian Trulli2" />
       <p class="text1">
         Para realizar esse exercício, é fundamental que os músculos abdominais estejam ativados para
         que se possa ter equilíbrio. Inicialmente, a pessoa deve ficar na posição de prancha e
