--- a/exercicios/treino-de-biceps.html
+++ b/exercicios/treino-de-biceps.html
@@ -58,10 +58,9 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de bíceps em casa são:</p>
 
       <h4 class="subtitle">1. Flexão de braço</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52299.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Embora seja muito utilizada no treino de peito, a flexão de braços trabalha vários grupos
@@ -79,10 +78,9 @@
       </p>
 
       <h4 class="subtitle">2. Flexão de braço inclinada</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52300_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A flexão de braço inclinada é outra variante da flexão que ajuda a trabalhar a força e a
@@ -100,10 +98,9 @@
       </p>
 
       <h4 class="subtitle">3. Rosca martelo</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52301_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O exercício “rosca martelo” é bastante eficaz para aumentar o volume dos bíceps e do músculo
@@ -123,10 +120,9 @@
       </p>
 
       <h4 class="subtitle">4. Rosca direta</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52302_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O exercício “rosca direta” é outra boa opção para os bíceps, pois trabalha força,
@@ -145,10 +141,9 @@
       </p>
 
       <h4 class="subtitle">5. Rosca direta sentado</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52303_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A rosca direta sentado é outra opção de exercício para o bíceps que também trabalha força,
@@ -164,10 +159,9 @@
         a 12 vezes em 3 a 4 séries, descansando de 60 a 90 segundos entre as séries.
       </p>
       <h4 class="subtitle">6. Prancha de antebraço</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52304_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Embora a prancha de antebraço seja um exercício mais focado no fortalecimento dos músculos
@@ -188,10 +182,9 @@
         tonificar os músculos, melhorar a flexibilidade, aumentar a circulação e prevenir lesões.
       </p>
       <h4 class="subtitle">1. Esticar os braços para trás</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52305_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O alongamento de esticar os braços para trás deve ser feito em pé para permitir alongar bem
@@ -203,10 +196,9 @@
         importante sentir que os bíceps estão alongados, além de respeitar os limites do corpo
       </p>
       <h4 class="subtitle">2. Estender os braços</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-biceps-em-casa_52306_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Esse alongamento, permite alongar os bíceps, peitoral e coluna, e deve ser feito sentado.
