--- a/exercicios/treino-de-costas.html
+++ b/exercicios/treino-de-costas.html
@@ -62,10 +62,9 @@
         Algumas opções de exercícios para fazer um treino de costas completo em casa são:
       </p>
       <h4 class="subtitle">1. Remada curvada</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53166.webp"
         alt="Italian Trulli"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A remada curvada é uma excelente opção de exercício para costas, pois trabalha os músculos
@@ -83,10 +82,9 @@
         séries.
       </p>
       <h4 class="subtitle">2. Crucifixo invertido inclinado</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53168_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Este exercício trabalha o fortalecimento e definição ou hipertrofia dos músculos das costas
@@ -109,10 +107,9 @@
         séries.
       </p>
       <h4 class="subtitle">3. Elevação de braços</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53169_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         <b class="bold">Como fazer:</b> sentar em um banco ou cadeira e colocar os pesos de forma
@@ -121,10 +118,9 @@
         pesos até ficar com os braços esticados e retornar à posição inicial.
       </p>
       <h4 class="subtitle">4. Flexão de braço inclinada</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53170_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A flexão de braços inclinada trabalha vários grupos musculares, incluindo as costas, os
@@ -140,10 +136,9 @@
         15 repetições cada, descansando de 60 a 90 segundos entre as séries.
       </p>
       <h4 class="subtitle">5. Superman</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53172_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O exercício do superman simula a posição do voo do super-homem e trabalha o fortalecimento
@@ -161,10 +156,9 @@
         movimento por 1 minuto.
       </p>
       <h4 class="subtitle">6. Prancha</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53173_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Embora a prancha seja um exercício mais focado no fortalecimento dos músculos do abdômen e
@@ -185,10 +179,9 @@
       </p>
       <p class="text1">Algumas opções de alongamento incluem:</p>
       <h4 class="subtitle">1. Sentar sobre os calcanhares</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-costas-em-casa_53174_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Esse alongamento permite alongar os músculos das costas como trapézio, rombóide e redondo,
@@ -201,10 +194,9 @@
         30 a 60 segundos.
       </p>
       <h4 class="subtitle">2. Flexão lateral do tronco</h4>
-      <img
+      <img class="fotos"
         src="img/treino-de-costas-em-casa_53175_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A flexão lateral do tronco alonga os músculos das costas, além do dorso e quadris e deve ser
