--- a/exercicios/treino-de-lombar.html
+++ b/exercicios/treino-de-lombar.html
@@ -54,10 +54,9 @@
       </p>
       <p class="text1">Algumas opções de alongamentos para lombar são:</p>
       <h4 class="subtitle">1. Alongamento da coxa</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_38659.webp"
         alt="aa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O alongamento da coxa permite alongar o músculo da parte de trás da coxa, além da
@@ -72,10 +71,9 @@
         mantendo essa posição durante cerca de 30 segundos e repetir o mesmo com a outra perna.
       </p>
       <h4 class="subtitle">2. Abraçar a perna</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_38658_l.webp"
         alt="aa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O abraço da perna deve ser feito deitado, permitindo alongar os músculos da lombar, além do
@@ -88,10 +86,9 @@
         perna, repetindo o movimento por 2 vezes em cada perna.
       </p>
       <h4 class="subtitle">3. Postura da borboleta</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_38660_l.webp"
-        alt="aa"
-        style="width: 660px; height: 400px"
+        alt="aa" 
       />
       <p class="text1">
         A postura da borboleta permite alongar os músculos das costas e pernas, e aliviar a tensão
@@ -107,10 +104,9 @@
         evitar afastar tanto os joelhos.
       </p>
       <h4 class="subtitle">4. Ponte</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_56244_l.webp"
         alt="aa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A ponte ajuda a estabilizar e fortalecer os músculos do core que sustentam e estabilizam a
@@ -125,10 +121,9 @@
         vezes.
       </p>
       <h4 class="subtitle">5. Posição da serpente</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_56245_l.webp"
         alt="aa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A posição da serpente permite alongar e fortalecer os músculos da parte inferior das costas,
@@ -144,10 +139,9 @@
       </p>
 
       <h4 class="subtitle">6. Superman</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_56246_l.webp"
-        alt="aa"
-        style="width: 660px; height: 400px"
+        alt="aa" 
       />
       <p class="text1">
         O exercício do superman simula a posição do voo do super-homem e trabalha o fortalecimento
@@ -164,10 +158,9 @@
         por 2 a 5 segundos e voltar à posição inicial. Repetir esse movimento por 1 minuto.
       </p>
       <h4 class="subtitle">7. Postura do gato</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_56247_l.webp"
         alt="aa"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A postura do gato permite alongar os músculos das costas, quadris, abdômen e tórax,
@@ -182,10 +175,9 @@
         repetir o movimento por 2 a 4 vezes.
       </p>
       <h4 class="subtitle">8. Rotação dos quadris</h4>
-      <img
+      <img class="fotos"
         src="../img/alongamentos-para-lombar_56248_l.webp"
-        alt="aa"
-        style="width: 660px; height: 400px"
+        alt="aa" 
       />
       <p class="text1">
         A rotação dos quadris permite melhorar a flexibilidade da coluna e quadris, reduzir a
