--- a/exercicios/treino-de-peito.html
+++ b/exercicios/treino-de-peito.html
@@ -60,10 +60,9 @@
       </p>
 
       <h4 class="subtitle">1. Flexão normal (20x)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52216.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Para iniciar o treino de glúteos, um bom exercício é a ponte, pois ajuda a estabilizar o
@@ -71,7 +70,7 @@
         aquecimento muscular.
       </p>
       <p class="text1">
-        <<b class="bold">Como fazer:</b> deve-se colocar as duas mãos no chão à largura dos ombros e
+        <b class="bold">Como fazer:</b> deve-se colocar as duas mãos no chão à largura dos ombros e
         depois esticar as pernas até formar uma linha reta desde os ombros até os pés. Por fim,
         mantendo essa postura deve-se dobrar os braços e descer com o peito em direção ao chão até
         formar uma ângulo de 90º com os cotovelos, voltando a subir para a posição inicial. Fazer 20
@@ -85,17 +84,16 @@
       </p>
 
       <h4 class="subtitle">2. Flexão isométrica (15 seg)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52217_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A flexão isométrica é uma variação da flexão normal que permite aumentar o tempo sob tensão
         do músculo peitoral, o que favorece o crescimento muscular.
       </p>
       <p class="text1">
-        <<b class="bold">Como fazer:</b> deve-se realizar uma flexão normal, mas, após descer o
+        <b class="bold">Como fazer:</b> deve-se realizar uma flexão normal, mas, após descer o
         peito até ao chão com os cotovelos num ângulo de 90º, deve-se segurar essa posição por 15
         segundos. Durante todo o tempo é também importante manter o abdominal bem contraído, para
         garantir que se mantém uma linha reta desde os pés até à cabeça.
@@ -106,10 +104,9 @@
       </p>
 
       <h4 class="subtitle">3. Flexão isolada (10x cada lado)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52218_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Este tipo de flexões isolar o trabalho muscular em cada lado do peitoral, fazendo com que a
@@ -128,10 +125,9 @@
       </p>
 
       <h4 class="subtitle">4. Flexão declinada (20x)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52219_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         As flexões são um exercício bastante completo para treinar o músculo peitoral, no entanto,
@@ -151,10 +147,9 @@
       </p>
 
       <h4 class="subtitle">5. Flexão inclinada (15x)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52220_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Após trabalhar mais a região superior do peitoral, as flexões inclinadas vão ajudar a focar
@@ -173,10 +168,9 @@
       </p>
 
       <h4 class="subtitle">6. Flexão explosiva (10x)</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-peito-em-casa_52221_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Para finalizar a série de treino e garantir a fadiga muscular, a flexão explosiva é um
