--- a/exercicios/treino-de-triceps.html
+++ b/exercicios/treino-de-triceps.html
@@ -60,10 +60,9 @@
       <p class="text1">Algumas opções de exercícios para fazer um treino de tríceps em casa são:</p>
 
       <h4 class="subtitle">1. Tríceps no banco</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52404.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O tríceps no banco ajuda a trabalhar a força e a resistência dos tríceps, além dos músculos
@@ -82,10 +81,9 @@
       </p>
 
       <h4 class="subtitle">2. Extensão de tríceps em pé</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52405_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A extensão de tríceps em pé trabalha a força do tríceps, deltóides e trapézio e deve ser
@@ -108,10 +106,9 @@
       </p>
 
       <h4 class="subtitle">3. Extensão de tríceps deitado</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52406_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A extensão de tríceps deitado é outra boa opção para os tríceps, pois trabalha força,
@@ -128,10 +125,9 @@
       </p>
 
       <h4 class="subtitle">4. Tríceps coice</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52407_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O tríceps coice é um exercício que ajuda a ganhar força e massa muscular nesta região e deve
@@ -145,10 +141,9 @@
       </p>
 
       <h4 class="subtitle">5. Elevação lateral dos braços</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52408_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A elevação lateral trabalha a força e resistência dos tríceps, além dos músculos dos ombros
@@ -166,10 +161,9 @@
       </p>
 
       <h4 class="subtitle">6.Flexão de braço inclinada</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52409_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A flexão de braço inclinada é exercício que ajuda a trabalhar a força e a resistência dos
@@ -186,10 +180,9 @@
       </p>
 
       <h4 class="subtitle">7. Agachamento lateral</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52410_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         A prancha de antebraço é considerada um exercício completo, pois trabalha os tríceps,
@@ -211,10 +204,9 @@
       </p>
 
       <h4 class="subtitle">1. Alongamento horizontal</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52411_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         O alongamento horizontal deve ser feito em pé para permitir alongar bem os tríceps
@@ -229,10 +221,9 @@
       </p>
 
       <h4 class="subtitle">2. Alongamento sobre a cabeça</h4>
-      <img
+      <img class="fotos"
         src="../img/treino-de-triceps-em-casa_52412_l.webp"
         alt="Italian Trulli2"
-        style="width: 660px; height: 400px"
       />
       <p class="text1">
         Esse alongamento, permite alongar os tríceps, peitoral e coluna, e deve ser feito em pé ou
